--- a/Schedule1/Base.lproj/Main.storyboard
+++ b/Schedule1/Base.lproj/Main.storyboard
@@ -1,24 +1,154 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="50u-bI-hOu">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Schedule-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Schedule1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HYf-Ve-XfH">
+                                <rect key="frame" x="0.0" y="140" width="414" height="722"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="5JK-bL-nXV" detailTextLabel="sQf-qQ-isb" style="IBUITableViewCellStyleSubtitle" id="Br9-Uc-J92">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Br9-Uc-J92" id="ocI-jt-oWy">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5JK-bL-nXV">
+                                                    <rect key="frame" x="20" y="10" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sQf-qQ-isb">
+                                                    <rect key="frame" x="20" y="31.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HYf-Ve-XfH" secondAttribute="trailing" id="1bS-73-qHK"/>
+                            <constraint firstItem="HYf-Ve-XfH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="91" id="Cen-cY-rM6"/>
+                            <constraint firstItem="HYf-Ve-XfH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="HRl-WS-nh9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HYf-Ve-XfH" secondAttribute="trailing" constant="87" id="LkE-Jx-eSP"/>
+                            <constraint firstItem="HYf-Ve-XfH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Nff-1e-NlK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HYf-Ve-XfH" secondAttribute="bottom" id="bTn-y5-tar"/>
+                            <constraint firstItem="HYf-Ve-XfH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vFz-yd-4Rq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HYf-Ve-XfH" secondAttribute="bottom" id="zPW-QS-joq"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Schedule" id="L1D-Dy-Azm">
+                        <barButtonItem key="leftBarButtonItem" title="Test" id="UZX-Qn-r9x">
+                            <connections>
+                                <action selector="didTapTest" destination="BYZ-38-t0r" id="WqK-uc-h3R"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="7vI-Ns-NJT">
+                            <connections>
+                                <action selector="didTapAdd" destination="BYZ-38-t0r" id="bsa-73-8e0"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="table" destination="HYf-Ve-XfH" id="x6Q-11-oZX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="125.89285714285714"/>
+        </scene>
+        <!--Add View Controller-->
+        <scene sceneID="bCl-pn-rWG">
+            <objects>
+                <viewController storyboardIdentifier="add" id="aAF-nt-dsc" customClass="AddViewController" customModule="Schedule1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M4g-9U-Agz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Time..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TyY-nz-ON6">
+                                <rect key="frame" x="10" y="146" width="394" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="Dko-R4-v6H"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="5G5-di-r2n">
+                                <rect key="frame" x="30" y="224" width="354" height="608"/>
+                            </datePicker>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Workout..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I5E-XP-QUQ">
+                                <rect key="frame" x="15" y="64" width="384" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="aAW-cx-DU3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="5G5-di-r2n" firstAttribute="top" secondItem="TyY-nz-ON6" secondAttribute="bottom" constant="30" id="10Q-uu-PsB"/>
+                            <constraint firstItem="67U-Id-guG" firstAttribute="trailing" secondItem="I5E-XP-QUQ" secondAttribute="trailing" constant="15" id="7A0-pl-9l9"/>
+                            <constraint firstItem="67U-Id-guG" firstAttribute="bottom" secondItem="5G5-di-r2n" secondAttribute="bottom" constant="30" id="Abh-Qx-4gh"/>
+                            <constraint firstItem="I5E-XP-QUQ" firstAttribute="leading" secondItem="67U-Id-guG" secondAttribute="leading" constant="15" id="DPf-LM-aJQ"/>
+                            <constraint firstItem="67U-Id-guG" firstAttribute="trailing" secondItem="TyY-nz-ON6" secondAttribute="trailing" constant="10" id="N22-ec-F44"/>
+                            <constraint firstItem="TyY-nz-ON6" firstAttribute="top" secondItem="I5E-XP-QUQ" secondAttribute="bottom" constant="30" id="RFO-pK-MUg"/>
+                            <constraint firstItem="5G5-di-r2n" firstAttribute="leading" secondItem="M4g-9U-Agz" secondAttribute="leading" constant="30" id="Xwo-O4-4Q6"/>
+                            <constraint firstItem="I5E-XP-QUQ" firstAttribute="top" secondItem="67U-Id-guG" secondAttribute="top" constant="20" id="ofa-Gj-SgS"/>
+                            <constraint firstItem="67U-Id-guG" firstAttribute="trailing" secondItem="5G5-di-r2n" secondAttribute="trailing" constant="30" id="pD9-iC-mgG"/>
+                            <constraint firstItem="TyY-nz-ON6" firstAttribute="leading" secondItem="67U-Id-guG" secondAttribute="leading" constant="10" id="pjq-rM-bCf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="67U-Id-guG"/>
+                    </view>
+                    <connections>
+                        <outlet property="bodyField" destination="TyY-nz-ON6" id="ZJp-JS-Vyd"/>
+                        <outlet property="datePicker" destination="5G5-di-r2n" id="CDT-2V-8h6"/>
+                        <outlet property="titleField" destination="I5E-XP-QUQ" id="2Yt-bk-Xom"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lXp-9Q-1C9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1886.9565217391305" y="125.89285714285714"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8Gr-2Q-TaB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="50u-bI-hOu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="VkZ-DG-p1Y">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="oL4-DB-YKi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AN4-hI-qTp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="125.89285714285714"/>
         </scene>
     </scenes>
 </document>
